src/objects/Weekly_Huddle_Learning_Action__c.object
<CustomObject>
    <fields>
        <fullName>Action_Plan__c</fullName>
        <label>Action Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Role Plays</fullName>
                </value>
                <value>
                    <fullName>RSM/RBD Role Plays</fullName>
                </value>
                <value>
                    <fullName>Coaching Others</fullName>
                </value>
                <value>
                    <fullName>Being Coached</fullName>
                </value>
                <value>
                    <fullName>Role Play and debrief w/Doctor</fullName>
                </value>
                <value>
                    <fullName>Role Play debrief w/partner PEC</fullName>
                </value>
                <value>
                    <fullName>Role Play debrief e/FOA</fullName>
                </value>
                <value>
                    <fullName>Role Play debrief w/RSM</fullName>
                </value>
                <value>
                    <fullName>Watch online Rainmaker videos and debrief</fullName>
                </value>
                <value>
                    <fullName>Build the bridge activity</fullName>
                </value>
                <value>
                    <fullName>Review Rainmaker manual</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Action_Type__c</fullName>
        <label>Other Action Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekly_Huddle__c</fullName>
        <label>Weekly_Huddle</label>
        <referenceTo>Weekly_Huddle__c</referenceTo>
        <relationshipLabel>Weekly Huddle Learning Actions</relationshipLabel>
        <relationshipName>Weekly_Huddle_Learning_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Weekly Huddle Learning Action</label>
    <nameField>
        <displayFormat>WHLN-{0000}</displayFormat>
        <label>Weekly Huddle Learning Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Huddle Learning Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>